tests/cases/compiler/es6ImportNameSpaceImportNoNamedExports.ts.orig
<<<<<<< HEAD
// @target: es6
=======
// @target: es5
>>>>>>> master
// @module: commonjs

// @filename: es6ImportNameSpaceImportNoNamedExports_0.ts
var a = 10;
export = a;

// @filename: es6ImportNameSpaceImportNoNamedExports_1.ts
import * as nameSpaceBinding from "es6ImportNameSpaceImportNoNamedExports_0"; // error